crates/carta/tests/snapshots/golden_writer__docbook__common__smart-ellipsis-dashes.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  wait… an en–dash and an em—dash
</para>
