crates/carta/tests/snapshots/golden_writer__docbook__common__soft-break.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  first line second line
</para>
