crates/carta/tests/snapshots/golden_writer__docbook__common__span-semantic.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <anchor xml:id="theid" />x term
</para>
