crates/carta/tests/snapshots/golden_writer__docbook__common__span.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  a <anchor xml:id="s" />styled word
</para>
