crates/carta/tests/snapshots/golden_writer__docbook__common__subscript-fallback.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  water H<subscript>2</subscript>O and sub<subscript>ab</subscript> here
</para>
