crates/carta/tests/snapshots/golden_writer__docbook__common__superscript-fallback.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  x super<superscript>(ab)</superscript> here
</para>
