crates/carta/tests/snapshots/golden_writer__docbook__common__tab-escape.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  a	b <literal>c	d</literal>
</para>
<programlisting>
	x	y
</programlisting>
