crates/carta/tests/snapshots/golden_writer__docbook__common__underline-smallcaps.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <emphasis role="underline">under</emphasis>
  <emphasis role="smallcaps">small</emphasis>
</para>
